--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Sign in Form</title>
    <link rel="stylesheet" href="style.css">
+</head>
  <body>
     <div class="container">
         <h2>Sign in Form</h2>
@@ -14,7 +16,7 @@
             <p id="welcome-message"></p>
 
     </div>
-    <link script src="script.js"></script>
+    <script src="script.js"></script>
 
  </body>
-</head>
+ </html>
